# ChangeLog for net-misc/leechcraft-full
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/leechcraft-full/ChangeLog,v 1.25 2012/07/19 20:01:17 maksbotan Exp $

*leechcraft-full-0.5.75 (19 Jul 2012)

  19 Jul 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-full-0.5.75.ebuild, -leechcraft-full-0.4.99.ebuild,
  -leechcraft-full-0.5.0.ebuild, -leechcraft-full-0.5.60.ebuild,
  -leechcraft-full-0.5.65.ebuild:
  Removed old versions, bumped to 0.5.75

  07 Jul 2012; Johannes Huber <johu@gentoo.org> leechcraft-full-0.5.70.ebuild:
  Stable for x86, wrt bug #424613

  04 Jul 2012; Agostino Sarubbo <ago@gentoo.org> leechcraft-full-0.5.70.ebuild:
  Stable for amd64, wrt bug #424613

  01 Jul 2012; Maxim Koltsov <maksbotan@gentoo.org> leechcraft-full-9999.ebuild:
  Move leechraft-vrooby to sys-fs

  29 Jun 2012; Maxim Koltsov <maksbotan@gentoo.org> leechcraft-full-9999.ebuild:
  Add monocle and vrooby plugins to 9999 full packgage

*leechcraft-full-0.5.70 (31 May 2012)

  31 May 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-full-0.5.70.ebuild:
  Bump LeechCraft to 0.5.70 "Hessian Blade"

  31 May 2012; Maxim Koltsov <maksbotan@gentoo.org>
  leechcraft-full-0.4.99.ebuild, leechcraft-full-0.5.0.ebuild,
  leechcraft-full-0.5.60.ebuild, leechcraft-full-0.5.65.ebuild,
  leechcraft-full-9999.ebuild:
  Change deps for leechcraft-lmp to new category

*leechcraft-full-0.5.65 (22 Apr 2012)

  22 Apr 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-full-0.5.65.ebuild:
  Bump net-misc/leechcraft-full to 0.5.65, thanks to 0xd34df00d

  19 Apr 2012; Maxim Koltsov <maksbotan@gentoo.org>
  leechcraft-full-0.4.99.ebuild, leechcraft-full-0.5.0.ebuild,
  leechcraft-full-0.5.60.ebuild, leechcraft-full-9999.ebuild:
  Do not pull leechcraft-lcftp as it is broken

  15 Apr 2012; Maxim Koltsov <maksbotan@gentoo.org> leechcraft-full-9999.ebuild:
  Add new plugins to 9999, thanks to 0xd34df00d
